# FulBM

./: .gitignore  CMakeLists.txt  README.md
data/: fully_con.txt  graph_example2.tsv  label_scheme.tsv
src/: bdg.cpp  bdg.h
test/: correctness_test.cpp
